# home-page

./: .gitignore  app.py  cdk.context.json  package-lock.json  package.json  pyproject.toml  quasar.conf.js
public/: Thesenpapier Religion Überarbeitet.docx
src/components/: Project.vue
src/layouts/: MainLayout.vue
src/pages/: Error404.vue  Index.vue
